@@ -28,7 +28,7 @@
  */
 
 require_once realpath(dirname(__FILE__) . '/../resources/lib/Bootstrap.class.inc');
-\Pakus\Application\Bootstrap::init(APP_BOOTSTRAP_FULL);
+\Pakus\Core\Bootstrap::init(APP_BOOTSTRAP_FULL);
 
 // Que hem de fer?
 $action = getREQUESTVar('a');
