@@ -5,6 +5,9 @@ Version 2.xx (developement version)
 * Changes is_int() to is_numeric() on some tests
 * Change DB.class license to GPLv2
 * AltoRouter is not longer included. It was never used.
+* Change DB.class namespace to \Pakus\Core
+* Change Session.class namespace to \Pakus\Core
+* Change Bootstrap.call namespace to \Pakus\Core
 
 Version 2.11
 ------------
